--- a/src/AndroidX.CameraCore/AndroidX.CameraCore.csproj
+++ b/src/AndroidX.CameraCore/AndroidX.CameraCore.csproj
@@ -12,7 +12,7 @@
         <RootNamespace>AndroidX.CameraCore</RootNamespace>
         <AssemblyName>AndroidX.CameraCore</AssemblyName>
         <FileAlignment>512</FileAlignment>
-        <TargetFrameworkVersion>v10.0</TargetFrameworkVersion>
+        <TargetFrameworkVersion>v11.0</TargetFrameworkVersion>
         <AndroidClassParser>class-parse</AndroidClassParser>
         <AndroidCodegenTarget>XAJavaInterop1</AndroidCodegenTarget>
     </PropertyGroup>
@@ -20,7 +20,7 @@
         <DebugSymbols>true</DebugSymbols>
         <DebugType>full</DebugType>
         <Optimize>false</Optimize>
-        <OutputPath>bin\Debug\</OutputPath>
+        <OutputPath>..\..\libs\Debug</OutputPath>
         <DefineConstants>DEBUG;TRACE</DefineConstants>
         <ErrorReport>prompt</ErrorReport>
         <WarningLevel>4</WarningLevel>
@@ -28,7 +28,7 @@
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
         <DebugType>pdbonly</DebugType>
         <Optimize>true</Optimize>
-        <OutputPath>bin\Release\</OutputPath>
+        <OutputPath>..\..\libs\Release</OutputPath>
         <DefineConstants>TRACE</DefineConstants>
         <ErrorReport>prompt</ErrorReport>
         <WarningLevel>4</WarningLevel>
@@ -51,10 +51,10 @@
         <TransformFile Include="Transforms\EnumMethods.xml" />
     </ItemGroup>
     <ItemGroup>
-      <LibraryProjectZip Include="Jars\camera-core-1.0.0-beta07.aar" />
+      <LibraryProjectZip Include="Jars\camera-core-1.0.0-beta11.aar" />
     </ItemGroup>
     <ItemGroup>
-      <PackageReference Include="Xamarin.AndroidX.Concurrent.Futures" Version="1.0.0.1" />
+      <PackageReference Include="Xamarin.AndroidX.Concurrent.Futures" Version="1.0.0.5" />
     </ItemGroup>
     <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
